app/stylesheets/partials/_one_col.scss
body.one_col {
  height: 100%;
  
  #container {
    margin: 0 30px;
    background: #fff;
    height: 100%;
  }

  #header {
    background: #606060;
    padding: 20px;
    height: 10%;
    #big-label {
      h1 {   
        color: #b3b3b3;
        font-weight: bold;
        font-family: 'Wallpoet', cursive;
        font-size: 200%;
        margin: 0;
      }
    }
    #header-links {
      float: right;
      margin-bottom: 20px;
      padding: 20px;
      width: 30%;
      font-size: 90%;
      text-align: right;
    }
  }

  #content {
    position: relative;
    z-index: 1;
    min-height: 100%;
    clear: left;
    padding: 20px;
    border: solid 1px #b3b3b3;
  }

  #splash_image {
    width: 320px;
    height: 320px;
    background: image_url('carpool_logo.gif') no-repeat;
    -moz-opacity:0.2;
    opacity: 0.2;
    position: absolute;
    left: 450px;
    top: 395px;
    z-index: -1;
  }

  #content h2 {
    color: #000;
    font-size: 160%;
    margin: 0 0 .5em;
  }

  #footer {
    color: #b3b3b3;
    font-family: 'Wallpoet', cursive;
    background: #606060;
    text-align: right;
    padding: 20px;
    height: 1%;
  }

}

